# ChangeLog for dev-util/buildbot
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/buildbot/ChangeLog,v 1.52 2009/12/14 08:29:26 djc Exp $

  14 Dec 2009; Dirkjan Ochtman <djc@gentoo.org> metadata.xml:
  Add upstream developer to metadata.

  13 Sep 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -buildbot-0.7.5.ebuild, -buildbot-0.7.6.ebuild, -buildbot-0.7.7-r1.ebuild,
  -buildbot-0.7.9-r1.ebuild, -buildbot-0.7.9-r2.ebuild,
  -buildbot-0.7.10_p1.ebuild, -files/buildbot.initd:
  Delete older, vulnerable ebuilds.

  11 Sep 2009; Markus Meier <maekke@gentoo.org> buildbot-0.7.11_p3.ebuild:
  amd64 stable, bug #282855

  05 Sep 2009; Raúl Porcel <armin76@gentoo.org> buildbot-0.7.11_p3.ebuild:
  arm/ia64/s390/sh/sparc stable wrt #282855

  30 Aug 2009; Brent Baude <ranger@gentoo.org> buildbot-0.7.11_p3.ebuild:
  Marking buildbot-0.7.11_p3 ppc64 for bug 282855

  30 Aug 2009; nixnut <nixnut@gentoo.org> buildbot-0.7.11_p3.ebuild:
  ppc stable #282855

  29 Aug 2009; Jeroen Roovers <jer@gentoo.org> buildbot-0.7.11_p3.ebuild:
  Stable for HPPA (bug #282855).

  28 Aug 2009; Tobias Klausmann <klausman@gentoo.org>
  buildbot-0.7.11_p3.ebuild:
  Stable on alpha, bug #282855

  28 Aug 2009; Christian Faulhammer <fauli@gentoo.org>
  buildbot-0.7.11_p3.ebuild:
  stable x86, security bug 282855

*buildbot-0.7.11_p3 (24 Aug 2009)

  24 Aug 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +buildbot-0.7.11_p3.ebuild:
  Version bump.

  17 Jun 2009; Jeroen Roovers <jer@gentoo.org> buildbot-0.7.10_p1.ebuild:
  Stable for HPPA (bug #270122).

  09 Jun 2009; Raúl Porcel <armin76@gentoo.org> buildbot-0.7.10_p1.ebuild:
  arm/ia64/s390/sh stable wrt #270122

  28 May 2009; Ferris McCormick <fmccor@gentoo.org>
  buildbot-0.7.10_p1.ebuild:
  Sparc stable, Bug #270122, Comment #3 of which please see.

  24 May 2009; Markus Meier <maekke@gentoo.org> buildbot-0.7.10_p1.ebuild: