@@ -2,14 +2,7 @@ AUX buildbot-0.7.5-root-skip-tests.patch 430 RMD160 696badc78f800a535996550977fa
 AUX buildbot.initd-r1 1230 RMD160 16a9fc902f09d5c73d68df8970e7491af9002594 SHA1 341384a6bb5e817914d26da4d854dcacfb8c9b25 SHA256 2caac58f72af711c54adaa7dcdfb1417255d26d07cf9f3388fd5267ee7fc7c47
 AUX buildmaster.confd 218 RMD160 a8f6893aa83c0c169f493104e1c6f023ec45f787 SHA1 8dc5e868092a8ea90c0cec5650ba85e412295968 SHA256 bb7f93e3867b32a25e2445a66d40573fa5073a80e73e35ae2a904db715f870c6
 AUX buildslave.confd 215 RMD160 ffe7545a43c10a9f3e9798f23ba6a32ab47c137b SHA1 8c57893b6ef370a98f4af552d91e1b702b89abd6 SHA256 5d0ab58d0808ccfa2d594b22047dfca9167c855ff749d34523177cefb307f76a
-DIST buildbot-0.7.10p1.tar.gz 1113464 RMD160 bdd9a8d6daf9e947e52784ee6d5fb30285f8d8b6 SHA1 799bf66cf4d6f8b9f94c0b167ac14b1198afdb7d SHA256 c3443194b341d44f3cca1a092690eaeb559b4b9b17769fcf1cce1df8d3a2ac71
 DIST buildbot-0.7.11p3.tar.gz 1019706 RMD160 5fc1d9e1c32127109f58ea727cae2e6266b16fb9 SHA1 3c0fc8bbdb2db92450d7294da11fc40979e94e63 SHA256 5bc20a29e761c3eb191c8d7b36ef10929f7c371c50dfeeec426ce3589c8ce740
-DIST buildbot-0.7.7.tar.gz 1109613 RMD160 4ff3fa7e9b3fef26c85f716de231e5241768a7a6 SHA1 47201c3e0d98f7b4a2bc5a4d959ebdc1be0634d7 SHA256 71f31925b9108a460345ab5cee975c28a28b4ce894a8877004f956617555f42c
-DIST buildbot-0.7.9.tar.gz 1032433 RMD160 586a8aecec6c30bde2ee277279f281fcd7be97e5 SHA1 9a1410007aff6ae965c746efa9d48fe5d344e9b9 SHA256 196e25f0f4320636cdf7165bc5affb4e2a0444b19cafd64d486b47fdec470265
-EBUILD buildbot-0.7.10_p1.ebuild 3069 RMD160 2f4107b855935d38594a90a227642377228c45c7 SHA1 b6c697c57669ac4b51d8390ace8d05fc20e6f4c4 SHA256 62f0720ae9e38e7c63d3526fea99a7c1cdd2851285a1596ce22fab9a0c173238
-EBUILD buildbot-0.7.11_p3.ebuild 3158 RMD160 822be43340be744faa1638c89461a574fdf509ce SHA1 b344b9fb6a2860007ec9f250c3b9255fc1dfb47b SHA256 dd7bdd638113bfbc9a7e5d027d2676ea3ac55786153f784ab668e8a919eb9dd1
-EBUILD buildbot-0.7.7-r1.ebuild 2922 RMD160 642fafd098bb5d327a6bd6c9da7cbb1c6706c7f7 SHA1 cd1141b5e2790d94b021a9181d15677f6953af9c SHA256 2a27238c56dc779171dd77f58b83318ee3b207dc5f18ac5cd6db573ea958c0b7
-EBUILD buildbot-0.7.9-r1.ebuild 2982 RMD160 fc09983496dc2724ececdb6313d8ebcb21c9188f SHA1 2f1c956aaa55a0aa298ba31b17f00abff573a50e SHA256 599f73538d0c25f1aab92d8a79cbb39c36ac286f59b9351d48cbc6d26b73c5d0
-EBUILD buildbot-0.7.9-r2.ebuild 3000 RMD160 36ad5cdec3c23ca6642120123698728962c08bb6 SHA1 5d808ebd266b35070894c2a639d2f87638b6c241 SHA256 3d837adb0219139c27a4db909f2aeb0ce780affb478bfd2cd4c4ed5a55b90bca
-MISC ChangeLog 7299 RMD160 52268163574f6c1d5ee25569abeec072ee83b498 SHA1 4997abde499e99ca0fc151cadced4021e84516da SHA256 9700e15565b39a9ddeed7050066e73c1615bfb09953f085e2c8ed2a6862cf463
+EBUILD buildbot-0.7.11_p3.ebuild 3162 RMD160 2d479d5c5ffb415ac151ebbec2ef3aac345307ad SHA1 1e24fa10ac717ff53f7c54c853643f0a20fecd5e SHA256 26d025d3d71a995439c87f26c39f7383b5a2eb4b9cba59a135d748e60c833277
+MISC ChangeLog 7418 RMD160 f18568c2f13d990249c31a9f9505af7a6d7538b4 SHA1 c94f64fc019ebefc4799585e80d2537c26cd48e6 SHA256 8f4a156562647d54941421501ccbdcf57264fb9030b7876c7c35e69c960034ce
 MISC metadata.xml 1292 RMD160 87e781b71385afcd20ae84320394fecf27fee917 SHA1 66be097e7db1e17218cf906f4876bda684d779bf SHA256 24c59ac7a6f85e11cd776e636b8e9ebd95350acdd0a3329ad4d584d294b6523a
